yoga and prisma connection

--- a/e-commerce/backend/.vscode/settings.json
+++ b/e-commerce/backend/.vscode/settings.json
@@ -2,5 +2,8 @@
   "workbench.colorCustomizations": {
     "titleBar.activeBackground": "#FF2C70",
     "titleBar.inactiveBackground": "#FF2C70CC"
-  }
+  },
+  "cSpell.words": [
+    "datamodel"
+  ]
 }
