signup account functionality

--- a/e-commerce/frontend/.vscode/settings.json
+++ b/e-commerce/frontend/.vscode/settings.json
@@ -6,8 +6,11 @@
     "titleBar.inactiveBackground": "#FFC600CC"
   },
   "cSpell.words": [
+    "heroku",
     "minmax",
+    "postbuild",
     "prefetch",
-    "sickfits"
+    "sickfits",
+    "waait"
   ]
 }
