--- a/e-commerce/backend/.vscode/settings.json
+++ b/e-commerce/backend/.vscode/settings.json
@@ -3,7 +3,5 @@
     "titleBar.activeBackground": "#FF2C70",
     "titleBar.inactiveBackground": "#FF2C70CC"
   },
-  "cSpell.words": [
-    "datamodel"
-  ]
+  "prettier.printWidth": 120
 }
